--- a/Mi Macro/Mi Macro/view/VLogin.xaml
+++ b/Mi Macro/Mi Macro/view/VLogin.xaml
@@ -1,29 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Mi_Macro.view.VLogin">
+             x:Class="Mi_Macro.view.VLogin"
+             BackgroundColor="#FFFFFF">
     <ContentPage.Resources>
         <ResourceDictionary>
-            <Style TargetType="Frame" BasedOn="{StaticResource RoundedEntryFrameStyle}" />
+            <Style TargetType="Frame" BasedOn="{StaticResource RoundedEntryFrameStyle}"/>
         </ResourceDictionary>
     </ContentPage.Resources>
     
-    
-    
-
     <ContentPage.Content>
         <StackLayout Padding="16">
             <Image Source="logo_512px.png" HorizontalOptions="CenterAndExpand" WidthRequest="160" HeightRequest="160" Margin="0,40"/>
-            <Label Text="Welcome Back!" TextColor="#009BAA" FontSize="24" FontAttributes="Bold"/>
-            <Label Text="Enter your username and password to continue." TextColor="#333333" FontSize="14" Margin="0,0,0,10"/>
+            <Label Text="Welcome Back!" TextColor="#009BAA" FontSize="24" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+            <Label Text="Enter your username and password to continue." TextColor="#333333" FontSize="14" Margin="0,0,0,10" HorizontalTextAlignment="Center"/>
             <Frame Style="{StaticResource RoundedEntryFrameStyle}" Margin="0,0,0,10">
-                <Entry Placeholder="Username" TextColor="#333333" FontSize="16" BackgroundColor="Transparent"/>
+                <Entry Placeholder="Username" TextColor="#333333" FontSize="16" BackgroundColor="Transparent" />
             </Frame>
             <Frame Style="{StaticResource RoundedEntryFrameStyle}" Margin="0,0,0,10">
-                <Entry Placeholder="Password" TextColor="#333333" FontSize="16" IsPassword="True"/>
+                <Entry Placeholder="Password" TextColor="#333333" FontSize="16" IsPassword="True" BackgroundColor="Transparent"/>
             </Frame>
             <Label Text="Forgot password?" TextTransform="None" HorizontalTextAlignment="End" Margin="0,0,0,20"/>
-            <Button Text="Log in" TextColor="#ffffff" BackgroundColor="#009BAA" CornerRadius="10"/>
+            <Button x:Name="btnLogIn" Clicked="btnLogIn_Clicked" Text="Log in" TextColor="#ffffff" BackgroundColor="#009BAA" CornerRadius="10"/>
+            <Button x:Name="btnSignIn" Clicked="btnSignIn_Clicked" Text="Sign in" TextColor="#ffffff" BackgroundColor="#C54C4C" CornerRadius="10"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
