--- a/Mi Macro/Mi Macro/view/VNotification.xaml
+++ b/Mi Macro/Mi Macro/view/VNotification.xaml
@@ -5,17 +5,25 @@
              BackgroundColor="#fff">
     <ContentPage.Content>
         <StackLayout>
-            <Frame BackgroundColor="#fff" Margin="0,0,0,20">
-                <Label Text="Notifications" TextColor="#009BAA" FontSize="24" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+            <Frame BackgroundColor="#fff" Margin="0,0,0,10">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width=".1*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width=".1*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="btnBack" Clicked="btnBack_Clicked" Grid.Column="0" ImageSource="back_24px.png" BackgroundColor="Transparent" />
+                    <Label Grid.Column="1" Text="Notifications" TextColor="#009BAA" FontSize="24" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+                </Grid>
             </Frame>
 
-            <ListView ItemsSource="{Binding listNotification}" HasUnevenRows="True" Margin="16,0,16,0">
+            <ListView ItemsSource="{Binding listNotification}" HasUnevenRows="True" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width=".2*"/>
+                                    <ColumnDefinition Width=".08*"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
@@ -26,7 +34,7 @@
                                 <Frame Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" BackgroundColor="#f2f2f2" CornerRadius="30" Margin="10" >
 
                                 </Frame>
-                                <Label Grid.Column="1" Grid.Row="0" Text="{Binding title}" TextColor="#000"/>
+                                <Label Grid.Column="1" Grid.Row="0" Text="{Binding title}" TextColor="#000" FontAttributes="Bold"/>
                                 <Label Grid.Column="1" Grid.Row="1" Text="{Binding description}"/>
                             </Grid>
                         </ViewCell>
